c4prj2_input/grade.txt
Grading at Wed Mar 10 10:14:35 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:43:5: error: implicit declaration of function ‘prirntf’ [-Werror=implicit-function-declaration]
     prirntf("%s\n",input);
     ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
